Update python notebook

--- a/wander_nodes_util.ipynb
+++ b/wander_nodes_util.ipynb
@@ -8168,145 +8168,210 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Final optimized version"
+      ],
+      "metadata": {
+        "id": "tG0u7tktFRqb"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
-        "%%time\n",
+        "import re\n",
         "\n",
-        "# READ FILE\n",
-        "OUTLAND = 1\n",
-        "TRICKERER_SQL = 1\n",
+        "def read_lines_from_file(filename):\n",
+        "    with open(filename, 'r') as file:\n",
+        "        return file.readlines()\n",
         "\n",
-        "def read_lines_from_file(file_name):\n",
-        "  with open(file_name) as file:\n",
-        "      node_lines = [line.rstrip() for line in file]\n",
-        "      #print(node_lines)\n",
-        "      return node_lines\n",
+        "class ContinentID:\n",
+        "    EasternKingdoms = 0\n",
+        "    Kalimdor = 1\n",
+        "    Outland = 530\n",
+        "    Northrend = 571\n",
         "\n",
-        "node_vertices = {}\n",
-        "node_zones = {}\n",
-        "node_lines = read_lines_from_file(\"trickerer_outland_northrend.sql\") if TRICKERER_SQL else read_lines_from_file(\"2023_06_09_00_creature_template_npcbot_wander_nodes.sql\")\n",
-        "#node_lines = read_lines_from_file(\"testing.sql\") if TRICKERER_SQL else read_lines_from_file(\"2023_06_09_00_creature_template_npcbot_wander_nodes.sql\")\n",
-        "node_map_id = \"530\" if OUTLAND else \"571\"\n",
-        "# Loop nodes\n",
-        "for line in node_lines:\n",
-        "  if len(line) > 0 and line[0] == '(':\n",
-        "    map_id = line.split(\",\")[2]\n",
-        "    if map_id == node_map_id:\n",
-        "      node_id = line.split('(')[1].split(',')[0]\n",
-        "      #print(node_id)\n",
-        "      #node_links = line.split(\"'\")[3].replace(\":0\", \"\")\n",
-        "      #node_links = node_links.rstrip(node_links[-1]).split(\" \")\n",
-        "      node_links = line.split(\"'\")[3].replace(\":0\", \"\")[:-1].split(\" \")\n",
-        "      #print(node_links)\n",
-        "      node_vertices[node_id] = node_links\n",
-        "      # Also add zone_ids\n",
-        "      zone_id = line.split(\",\")[3]\n",
-        "      node_zones[node_id] = zone_id\n",
+        "# Settings and global vars\n",
+        "TRICKERER_SQL = 0\n",
+        "continent = ContinentID.EasternKingdoms\n",
         "\n",
-        "from collections import defaultdict\n",
+        "def contains(c, e):\n",
+        "    return e in c\n",
         "\n",
-        "# This class represents a directed graph using adjacency list representation\n",
         "class Graph:\n",
-        "  def __init__(self):\n",
-        "    # Default dictionary to store graph\n",
-        "    self.graph = defaultdict(list)\n",
-        "    self.found_targets = defaultdict(set)\n",
-        "    self.node_history = defaultdict(list)\n",
-        "    self.used_found_targets_count = 0\n",
-        "    self.curr_start_id = 0\n",
+        "    def __init__(self):\n",
+        "        self.graph = {}\n",
+        "        self.node_history = {}\n",
+        "        self.curr_start_id = 0\n",
+        "        self.target_found = False\n",
+        "        self.found_targets = {}\n",
+        "        self.should_print = False\n",
         "\n",
-        "  def addEdge(self, u, v):\n",
-        "    self.graph[u].append(v)\n",
+        "    def addEdge(self, u, v):\n",
+        "        if u not in self.graph:\n",
+        "            self.graph[u] = []\n",
+        "        self.graph[u].append(v)\n",
         "\n",
-        "  def DFSUtil(self, v, visited, target_v):\n",
-        "    # Mark the current node as visited and print it\n",
-        "    visited.add(v)\n",
-        "    if v not in self.node_history[self.curr_start_id] and v != self.curr_start_id:\n",
-        "      self.node_history[self.curr_start_id].append(v)\n",
+        "    def DFSUtil(self, v, visited, target_v):\n",
+        "        visited.add(v)\n",
+        "        if v not in self.node_history.get(self.curr_start_id, []) and v != self.curr_start_id:\n",
+        "            if self.curr_start_id not in self.node_history:\n",
+        "                self.node_history[self.curr_start_id] = []\n",
+        "            self.node_history[self.curr_start_id].append(v)\n",
         "\n",
-        "    if v == target_v:\n",
-        "      if self.should_print:\n",
-        "        print(v, end=\" \")\n",
-        "        print(\"Target found!\")\n",
-        "      self.target_found = True\n",
-        "      #self.found_targets[target_v].update(visited)\n",
-        "      self.found_targets[target_v] = self.found_targets[target_v].union(visited)\n",
-        "      return\n",
-        "    elif not self.target_found:\n",
-        "      if self.should_print:\n",
-        "        print(v, end=\" \")\n",
-        "      # Recur for all the vertices adjacent to this vertex\n",
-        "      for neighbour in self.graph[v]:\n",
-        "        if neighbour not in visited:\n",
-        "          self.DFSUtil(neighbour, visited, target_v)\n",
+        "        if v == target_v:\n",
+        "            if self.should_print:\n",
+        "                print(f\"{v} Target found!\")\n",
+        "            self.target_found = True\n",
+        "            if target_v not in self.found_targets:\n",
+        "                self.found_targets[target_v] = set()\n",
+        "            self.found_targets[target_v].update(visited)\n",
+        "            return\n",
+        "        elif not self.target_found:\n",
+        "            if self.should_print:\n",
+        "                print(v, end=\" \")\n",
+        "            for neighbour in self.graph.get(v, []):\n",
+        "                if neighbour not in visited:\n",
+        "                    self.DFSUtil(neighbour, visited, target_v)\n",
         "\n",
-        "  def DFS_search(self, start_id, target_id):\n",
-        "    if self.should_print:\n",
-        "      print(\"start_id:\", start_id, \"\\ntarget_id:\", target_id)\n",
-        "    self.curr_start_id = start_id\n",
-        "    visited = set()\n",
-        "    # First check found_targets\n",
-        "    if target_id in self.found_targets.keys() and start_id in self.found_targets[target_id]:\n",
-        "      #print(f\"Target {target_id} already found from start_id {start_id}\")\n",
-        "      return True\n",
-        "    elif len(self.node_history[start_id]) > 0:\n",
-        "      if target_id in self.found_targets.keys():\n",
-        "        for start_node in self.node_history[start_id]:\n",
-        "          if start_node == target_id or start_node in self.found_targets[target_id]:\n",
+        "    def DFS_search(self, start_id, target_id):\n",
+        "        if self.should_print:\n",
+        "            print(f\"start_id: {start_id}, target_id: {target_id}\")\n",
+        "        self.curr_start_id = start_id\n",
+        "        visited = set()\n",
+        "\n",
+        "        if target_id in self.found_targets and start_id in self.found_targets[target_id]:\n",
         "            return True\n",
-        "      else:\n",
-        "        start_id = self.node_history[start_id][-1]\n",
-        "        visited = set(self.node_history[start_id])\n",
+        "        elif start_id in self.node_history:\n",
+        "            if target_id in self.found_targets:\n",
+        "                for start_node in self.node_history[start_id]:\n",
+        "                    if start_node == target_id or start_node in self.found_targets[target_id]:\n",
+        "                        return True\n",
+        "            else:\n",
+        "                start_id = self.node_history[start_id][-1]\n",
+        "                if start_id in self.node_history:  # Check if start_id exists in node_history before updating visited\n",
+        "                    visited.update(self.node_history[start_id])\n",
         "\n",
-        "    self.target_found = False\n",
-        "    for vertex in self.graph.copy()[start_id]:\n",
-        "    #for vertex in self.graph[start_id]:\n",
-        "      if vertex not in visited and not self.target_found:\n",
-        "        self.DFSUtil(vertex, visited, target_id)\n",
-        "      if self.target_found:\n",
+        "        self.target_found = False\n",
+        "        for vertex in self.graph.get(start_id, []):\n",
+        "            if vertex not in visited and not self.target_found:\n",
+        "                self.DFSUtil(vertex, visited, target_id)\n",
+        "\n",
+        "            if self.target_found:\n",
+        "                return True\n",
         "        return self.target_found\n",
         "\n",
-        "    return self.target_found\n",
+        "def extract_index(input_str, sep, idx):\n",
+        "    return input_str.split(sep)[idx]\n",
         "\n",
-        "#if __name__ == \"__main__\":\n",
-        "g = Graph()\n",
-        "for node_id, node_links in node_vertices.items():\n",
-        "  #print(node_id, node_links)\n",
-        "  for link in node_links:\n",
-        "    g.addEdge(int(node_id), int(link))\n",
+        "isolated_nodes = [\n",
+        "    (3923, 3936),\n",
+        "    (3959, 3978),\n",
+        "    (4087, 4103),\n",
+        "    (4746, 4789),\n",
+        "    (4790, 4854)\n",
+        "]\n",
         "\n",
-        "g.should_print = False\n",
-        "# Search all\n",
-        "print(\"\\nLooping all nodes... Nodes:\", len(node_vertices.values()))\n",
-        "loop_counter = 0\n",
-        "loop_counter_one = 0\n",
-        "#g.should_print = False\n",
-        "links_to_all = True\n",
-        "# Dicts are ordered in Pythhon >= 3.7, so we can iterate over the keys like below\n",
-        "# We can also randomize dict order to potentially get better results:\n",
-        "# It's better to do 2-3 expansive searches (from hf to netherstorm for example):\n",
-        "#can_reach = g.DFS_search(2418, 3579) # Hf -> Netherstorm\n",
-        "#can_reach = g.DFS_search(2418, 2860) # Hf -> Nagrand\n",
-        "#can_reach = g.DFS_search(2418, 3649) # Hf -> SmV\n",
+        "def isIsolatedNodes(node_id, other_node_id):\n",
+        "    for node_range in isolated_nodes:\n",
+        "        if node_id >= node_range[0] and node_id <= node_range[1]:\n",
+        "            return not (other_node_id >= node_range[0] and other_node_id <= node_range[1])\n",
+        "        elif other_node_id >= node_range[0] and other_node_id <= node_range[1]:\n",
+        "            return not (node_id >= node_range[0] and node_id <= node_range[1])\n",
+        "    return False\n",
         "\n",
-        "for node_id in node_vertices.keys():\n",
-        "  for other_node_id in node_vertices.keys():\n",
-        "    node_id = int(node_id)\n",
-        "    other_node_id = int(other_node_id)\n",
-        "    if node_id != other_node_id:\n",
-        "      can_reach = g.DFS_search(node_id, other_node_id)\n",
-        "      loop_counter += 1\n",
-        "      if not can_reach:\n",
-        "        print(\"CAN'T REACH:\", other_node_id, \"FROM NODE:\", node_id)\n",
-        "        links_to_all = False\n",
-        "        break\n",
-        "  else:\n",
-        "    continue # Only executed if the inner loop did NOT break\n",
-        "  break # Only executed if the inner loop DID break\n",
+        "def main():\n",
+        "    node_map_id = str(continent)\n",
+        "    node_lines = []\n",
+        "    node_zones = {}\n",
+        "    isolated_zones = [141, 1657]\n",
+        "    node_vertices = {}\n",
         "\n",
-        "node_node_count = len(node_vertices.values())\n",
-        "print(\"Done checking links... loop_counter:\", loop_counter, \"- should be\", node_node_count,\"*\",node_node_count-1,\" = \",node_node_count*(node_node_count-1))\n",
-        "#assert loop_counter == node_node_count * (node_node_count-1)"
+        "    if continent < 2:\n",
+        "        node_lines = read_lines_from_file(\"2023_04_04_00_creature_template_npcbot_wander_nodes.sql\")\n",
+        "    else:\n",
+        "        if TRICKERER_SQL:\n",
+        "            node_lines = read_lines_from_file(\"trickerer_outland_northrend.sql\")\n",
+        "        else:\n",
+        "            node_lines = read_lines_from_file(\"2023_06_09_00_creature_template_npcbot_wander_nodes.sql\")\n",
+        "\n",
+        "    for line in node_lines:\n",
+        "        if line and line[0] == '(':\n",
+        "            map_id = extract_index(line, ',', 2).strip()\n",
+        "            if map_id == node_map_id:\n",
+        "                node_id = int(line.split(',')[0][1:].strip())\n",
+        "                node_links = re.sub(\":0\", \"\", extract_index(line, '\\'', 3))\n",
+        "                links = [int(link) for link in node_links.split()]\n",
+        "                node_vertices[node_id] = links\n",
+        "                zone_id = int(extract_index(line, ',', 3))\n",
+        "                node_zones[node_id] = zone_id\n",
+        "\n",
+        "    g = Graph()\n",
+        "    for node_id, node_links in node_vertices.items():\n",
+        "        for link in node_links:\n",
+        "            g.addEdge(node_id, link)\n",
+        "\n",
+        "    g.should_print = True\n",
+        "    if continent == ContinentID.EasternKingdoms:\n",
+        "        assert g.DFS_search(686, 913)\n",
+        "        assert g.DFS_search(748, 942)\n",
+        "        assert g.DFS_search(778, 2)\n",
+        "    elif continent == ContinentID.Kalimdor:\n",
+        "        assert g.DFS_search(1005, 1236)\n",
+        "        assert g.DFS_search(26, 2366)\n",
+        "        assert g.DFS_search(1271, 95)\n",
+        "    elif TRICKERER_SQL:\n",
+        "        if continent == ContinentID.Outland:\n",
+        "            assert g.DFS_search(2418, 2864)\n",
+        "            assert g.DFS_search(2889, 3096)\n",
+        "            assert g.DFS_search(3257, 3442)\n",
+        "        else:\n",
+        "            assert g.DFS_search(4010, 4556)\n",
+        "            assert g.DFS_search(4992, 4362)\n",
+        "            assert g.DFS_search(3779, 5038)\n",
+        "    else:\n",
+        "        if continent == ContinentID.Outland:\n",
+        "            assert g.DFS_search(2418, 2474)\n",
+        "            assert g.DFS_search(2418, 2450)\n",
+        "            assert g.DFS_search(2500, 2602)\n",
+        "        else:\n",
+        "            assert g.DFS_search(2802, 2900)\n",
+        "            assert g.DFS_search(3273, 3330)\n",
+        "            assert g.DFS_search(3353, 2708)\n",
+        "\n",
+        "    node_count = len(node_vertices)\n",
+        "    print(f\"\\nLooping all nodes... Nodes: {node_count}\")\n",
+        "    links_to_all = True\n",
+        "    break_when_no_link = False\n",
+        "    loop_counter = 0\n",
+        "    isolated_counter = 0\n",
+        "    g.should_print = False\n",
+        "\n",
+        "    for node_id in node_vertices:\n",
+        "        for other_node_id in node_vertices:\n",
+        "            if TRICKERER_SQL:\n",
+        "                trying_to_reach_isolated = (node_zones[node_id] in isolated_zones or node_zones[other_node_id] in isolated_zones) and node_zones[node_id] != node_zones[other_node_id] or isIsolatedNodes(node_id, other_node_id)\n",
+        "            else:\n",
+        "                trying_to_reach_isolated = (node_zones[node_id] in isolated_zones or node_zones[other_node_id] in isolated_zones) and node_zones[node_id] != node_zones[other_node_id]\n",
+        "\n",
+        "            if trying_to_reach_isolated:\n",
+        "                isolated_counter += 1\n",
+        "            elif node_id != other_node_id and not trying_to_reach_isolated:\n",
+        "                can_reach = g.DFS_search(node_id, other_node_id)\n",
+        "                loop_counter += 1\n",
+        "                if not can_reach:\n",
+        "                    print(f\"CAN'T REACH: {other_node_id} (zone: {node_zones[other_node_id]}) FROM NODE: {node_id} (zone: {node_zones[node_id]})\")\n",
+        "                    links_to_all = False\n",
+        "                    if break_when_no_link:\n",
+        "                        break\n",
+        "        if not links_to_all and break_when_no_link:\n",
+        "            break\n",
+        "\n",
+        "    print(f\"Done checking links... links_to_all: {links_to_all}. Nodes checked: {loop_counter + isolated_counter} - should be {node_count} * {node_count - 1} = {node_count * (node_count - 1)}\")\n",
+        "    print(f\"isolated_counter: {isolated_counter} ({(isolated_counter / loop_counter) * 100} %)\")\n",
+        "\n",
+        "if __name__ == \"__main__\":\n",
+        "    main()"
       ],
       "metadata": {
         "colab": {
